Sun Dec  4 11:14:45 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* TAO_IDL/be/be_helper.cpp

	Fixed an unused arg warning.

Sat Dec  3 20:54:28 2005  Chris Cleeland  <cleeland_c@ociweb.com>

	* orbsvcs/orbsvcs/Notify/XML_Loader.cpp: Moved the namespace decl
	  for TOPOLOGY_ID_NAME inside the VERSIONED_NAMESPACE_DECL block
	  to fix broken versioned namespace builds.  Thanks to Ossama for
	  pointing this out.

Sat Dec  3 19:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/QtTests/QtTests.mpc:
          Added anytypecode to the client project

Sat Dec  3 09:43:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/constants.idl:
          Removed the wstring constants for the time being, cause issues
          with some builds that lack wchar_t support

Fri Dec  2 16:18:15 2005  Chris Cleeland  <cleeland_c@ociweb.com>

	* orbsvcs/tests/Notify/performance-tests/RedGreen/RedGreen_Test.cpp (DTOR):
	  Add try/catch block around call to ec->destroy() because it
	  seems that often in this test the EC is gone by the time
	  destroy() gets called.  This raises a COMM_FAILURE which now
	  gets caught and noticed printed.  We also now catch and print
	  any exception raised in the DTOR since there's little chance of
	  doing anything about it, and at least this way we get
	  information.

Fri Dec  2 10:26:33 2005  Chris Cleeland  <cleeland_c@ociweb.com>

	* orbsvcs/orbsvcs/Notify/XML_Topology_Factory.h: Added 'extern'
	  declaration in here as this seems to placate the VC8 compiler's
	  errors.

Fri Dec  2 11:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/SSLIOP/params_dup.h:
          Added missing include of ace/pre.h

Fri Dec  2 11:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1627_Regression/test.mpc:
        * tests/Bug_1551_Regression/test.mpc:
        * tests/Bug_1482_Regression/test.mpc: